remove: 일일 리마인더를 정보성으로 확정하고 법정 동의 모델 제거
제품 책임자가 DAILY_REMINDER를 정보성 통지로 확정했다. 사용자가 직접 켜고 시각을 고르는 알림이라
정보통신망법 제50조(영리목적 광고성 정보)의 적용 대상이 아니고, 그러면 광고성 전제로 만든 장치가
전부 실행되지 않는 코드가 된다.

- 제거: notification_consents/notification_consent_events 두 테이블과 엔티티·레포·서비스,
  동의/철회 API 2종, 비로그인 수신거부 API와 opt_out_token_hash, PushComplianceClass,
  (광고) 표기·야간 전송 판정, 전송자 정보 설정, TermType 2종과 PUSH_SETTINGS stage,
  에러 코드 -4001/-4002.
- 유지: 사용자 설정 전부. 전체 푸시 ON/OFF, 일일 리마인더 ON/OFF, 시각 설정과 그 저장 구조.
  사용자가 통제권을 잃는 부분은 없다 — 기본 OFF라 직접 켜야 발송되는 것도 그대로다.
- 광고성 알림을 나중에 추가하려면 동의·야간 제한·표기·수신거부 수단을 함께 도입해야 한다는 것을
  knowledge invariant로 남긴다.