@@ -19,10 +19,6 @@ import com.google.firebase.messaging.MessagingErrorCode;
 import com.google.firebase.messaging.MulticastMessage;
 import com.google.firebase.messaging.Notification;
 import com.google.firebase.messaging.SendResponse;
-import java.time.Clock;
-import java.time.Instant;
-import java.time.ZoneOffset;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.IntStream;
@@ -40,9 +36,8 @@ import org.slf4j.LoggerFactory;
 import org.springframework.test.util.ReflectionTestUtils;
 
 /**
- * firebase sender 단위 검증 — server-built payload(문구·data·FID target·TTL)를 고정하고, 광고성 표기 합성,
- * 전송 직전 야간 재판정, 500 chunk 분할, response index 매핑, 오류 분류별 삭제 정책, FID 비로그를 검증한다.
- * 인프라 0.
+ * firebase sender 단위 검증 — server-built payload(문구·data·FID target·TTL)를 고정하고, 500 chunk 분할,
+ * response index 매핑, 오류 분류별 삭제 정책, FID 비로그를 검증한다. 인프라 0.
  *
  * <p>{@link MulticastMessage}는 public 접근자가 없어 pinned SDK(9.10.0)의 내부 필드를 reflection으로
  * 읽는다 — 이 payload 고정이 있어야 response의 {@code INVALID_ARGUMENT}를 target(FID) 무효로 간주하는
@@ -53,13 +48,6 @@ class FirebasePushMessageSenderTest {
 
     private static final String TASK_ID = "t-1";
     private static final PushMessage COMPLETION = PushMessage.timelineCompletion(TASK_ID, "SUCCESS");
-    private static final PushMessage REMINDER = PushMessage.dailyReminder();
-    /** KST 14:00 — 주간. */
-    private static final Clock DAY_CLOCK = Clock.fixed(Instant.parse("2026-07-21T05:00:00Z"), ZoneOffset.UTC);
-    /** KST 21:30 — 야간(21:00 이상). */
-    private static final Clock NIGHT_CLOCK = Clock.fixed(Instant.parse("2026-07-21T12:30:00Z"), ZoneOffset.UTC);
-    private static final PushSenderProperties SENDER =
-            new PushSenderProperties("라이모리 주식회사", "help@laimory.app");
 
     @Mock
     private FirebaseMessaging firebaseMessaging;
@@ -73,7 +61,7 @@ class FirebasePushMessageSenderTest {
 
     @BeforeEach
     void setUp() {
-        sender = new FirebasePushMessageSender(firebaseMessaging, SENDER, DAY_CLOCK);
+        sender = new FirebasePushMessageSender(firebaseMessaging);
         senderLogger = (Logger) LoggerFactory.getLogger(FirebasePushMessageSender.class);
         logAppender = new ListAppender<>();
         logAppender.start();
@@ -85,13 +73,8 @@ class FirebasePushMessageSenderTest {
         senderLogger.detachAppender(logAppender);
     }
 
-    private FirebasePushMessageSender senderAt(Clock clock) {
-        return new FirebasePushMessageSender(firebaseMessaging, SENDER, clock);
-    }
-
-    /** 야간 동의 없는 정보성/일반 target. */
-    private static List<PushTarget> targets(String... fids) {
-        return Arrays.stream(fids).map(PushTarget::informational).toList();
+    private static List<String> targets(String... fids) {
+        return List.of(fids);
     }
 
     // --- reflection helpers (pinned firebase-admin 9.10.0 내부 구조) ---
@@ -144,7 +127,7 @@ class FirebasePushMessageSenderTest {
 
     private static BatchResponse batchOf(SendResponse... responses) {
         BatchResponse batch = mock(BatchResponse.class);
-        when(batch.getResponses()).thenReturn(Arrays.asList(responses));
+        when(batch.getResponses()).thenReturn(List.of(responses));
         return batch;
     }
 
@@ -160,7 +143,7 @@ class FirebasePushMessageSenderTest {
     // --- 정보성 payload 고정 ---
 
     @Test
-    void informational_buildsPlainNotificationWithoutAdvertisingDecoration() throws Exception {
+    void buildsFixedNotificationWithRoutingDataOnly() throws Exception {
         givenAllSuccess(2);
 
         PushSendResult result = sender.send(COMPLETION, targets("fid-1", "fid-2"));
@@ -169,11 +152,9 @@ class FirebasePushMessageSenderTest {
         MulticastMessage message = messageCaptor.getValue();
         assertThat(notificationTitleOf(message)).isEqualTo("타임라인 생성 완료");
         assertThat(notificationBodyOf(message)).isEqualTo("타임라인이 준비됐어요.");
-        // 정보성에는 (광고) 표기·수신거부 안내·전송자 정보를 붙이지 않는다.
         assertThat(dataOf(message)).containsExactlyInAnyOrderEntriesOf(
                 Map.of("taskId", TASK_ID, "status", "SUCCESS"));
         assertThat(result.successCount()).isEqualTo(2);
-        assertThat(result.skippedCount()).isZero();
         assertThat(result.invalidFirebaseInstallationIds()).isEmpty();
     }
 
@@ -204,78 +185,6 @@ class FirebasePushMessageSenderTest {
         assertThat(ReflectionTestUtils.getField(androidConfig, "priority")).isNull();
     }
 
-    // --- 광고성 표기 합성 ---
-
-    @Test
-    void advertising_prefixesTitleAndAppendsFreeOptOutNoticeWithSenderInfo() throws Exception {
-        givenAllSuccess(1);
-
-        sender.send(REMINDER, targets("fid-1"));
-
-        verify(firebaseMessaging).sendEachForMulticast(messageCaptor.capture());
-        MulticastMessage message = messageCaptor.getValue();
-        // 광고 표기·무료 수신거부 안내는 sender가 공통으로 붙인다 — 호출자가 빠뜨릴 수 없다.
-        assertThat(notificationTitleOf(message)).isEqualTo("(광고) 타임라인을 완성해보세요!");
-        assertThat(notificationBodyOf(message)).isEqualTo("하루를 기록해보세요!\n수신거부: 설정 > 알림 (무료)");
-        assertThat(dataOf(message)).containsAllEntriesOf(Map.of(
-                "senderName", "라이모리 주식회사",
-                "senderContact", "help@laimory.app",
-                "optOutRoute", PushMessage.OPT_OUT_ROUTE));
-        // 수신거부 credential은 payload에 싣지 않는다 — 단말이 보관한 값으로 호출한다.
-        assertThat(dataOf(message)).doesNotContainKeys("optOutToken", "firebaseInstallationId");
-    }
-
-    // --- 전송 직전 야간 재판정 ---
-
-    @Test
-    void advertisingAtNight_dropsTargetsWithoutNightConsent() throws Exception {
-        BatchResponse batch = batchOf(successResponse());
-        when(firebaseMessaging.sendEachForMulticast(any())).thenReturn(batch);
-
-        PushSendResult result = senderAt(NIGHT_CLOCK).send(REMINDER, List.of(
-                new PushTarget("fid-night-ok", true),
-                new PushTarget("fid-no-night", false)));
-
-        verify(firebaseMessaging).sendEachForMulticast(messageCaptor.capture());
-        assertThat(fidsOf(messageCaptor.getValue())).containsExactly("fid-night-ok");
-        assertThat(result.targetCount()).isEqualTo(2);
-        assertThat(result.successCount()).isEqualTo(1);
-        assertThat(result.skippedCount()).isEqualTo(1);
-    }
-
-    @Test
-    void advertisingAtNight_allTargetsWithoutNightConsent_skipsFcmCallEntirely() throws Exception {
-        PushSendResult result = senderAt(NIGHT_CLOCK).send(REMINDER, targets("fid-1", "fid-2"));
-
-        verify(firebaseMessaging, never()).sendEachForMulticast(any());
-        assertThat(result.skippedCount()).isEqualTo(2);
-        assertThat(result.successCount()).isZero();
-        assertThat(result.failureCount()).isZero();
-    }
-
-    @Test
-    void advertisingDuringDay_sendsWithoutNightConsent() throws Exception {
-        givenAllSuccess(1);
-
-        // 예정 시각이 야간이었더라도 실제 전송이 주간이면 일반 광고 동의만으로 보낸다.
-        PushSendResult result = sender.send(REMINDER, targets("fid-1"));
-
-        verify(firebaseMessaging).sendEachForMulticast(any());
-        assertThat(result.successCount()).isEqualTo(1);
-        assertThat(result.skippedCount()).isZero();
-    }
-
-    @Test
-    void informationalAtNight_isNotRestricted() throws Exception {
-        givenAllSuccess(1);
-
-        PushSendResult result = senderAt(NIGHT_CLOCK).send(COMPLETION, targets("fid-1"));
-
-        verify(firebaseMessaging).sendEachForMulticast(any());
-        assertThat(result.successCount()).isEqualTo(1);
-        assertThat(result.skippedCount()).isZero();
-    }
-
     // --- chunk 분할 ---
 
     @Test
@@ -288,8 +197,7 @@ class FirebasePushMessageSenderTest {
 
     @Test
     void exactly500Targets_singleCall() throws Exception {
-        List<PushTarget> fids = IntStream.range(0, 500)
-                .mapToObj(i -> PushTarget.informational("fid-" + i)).toList();
+        List<String> fids = IntStream.range(0, 500).mapToObj(i -> "fid-" + i).toList();
         givenAllSuccess(500);
 
         PushSendResult result = sender.send(COMPLETION, fids);
@@ -302,8 +210,7 @@ class FirebasePushMessageSenderTest {
 
     @Test
     void fiveHundredOneTargets_splitInto500Plus1_preservingOrder() throws Exception {
-        List<PushTarget> fids = IntStream.range(0, 501)
-                .mapToObj(i -> PushTarget.informational("fid-" + i)).toList();
+        List<String> fids = IntStream.range(0, 501).mapToObj(i -> "fid-" + i).toList();
         SendResponse[] first = IntStream.range(0, 500).mapToObj(i -> successResponse())
                 .toArray(SendResponse[]::new);
         BatchResponse firstBatch = batchOf(first);
@@ -343,20 +250,6 @@ class FirebasePushMessageSenderTest {
         assertThat(result.invalidFirebaseInstallationIds()).containsExactly("fid-gone", "fid-bad");
     }
 
-    @Test
-    void nightSkippedTargets_areNotMisalignedWithResponseIndexes() throws Exception {
-        // 야간 제외 뒤 남은 target 순서와 response index가 어긋나면 엉뚱한 FID를 무효로 지운다.
-        BatchResponse batch = batchOf(successResponse(), failureResponse(MessagingErrorCode.UNREGISTERED));
-        when(firebaseMessaging.sendEachForMulticast(any())).thenReturn(batch);
-
-        PushSendResult result = senderAt(NIGHT_CLOCK).send(REMINDER, List.of(
-                new PushTarget("fid-dropped", false),
-                new PushTarget("fid-kept-ok", true),
-                new PushTarget("fid-kept-gone", true)));
-
-        assertThat(result.invalidFirebaseInstallationIds()).containsExactly("fid-kept-gone");
-        assertThat(result.skippedCount()).isEqualTo(1);
-    }
 
     @ParameterizedTest
     @EnumSource(value = MessagingErrorCode.class,
@@ -407,8 +300,7 @@ class FirebasePushMessageSenderTest {
     @Test
     void callLevelException_countsChunkAsFailed_withoutInvalidation_andContinuesOtherChunks() throws Exception {
         // 호출 수준(chunk 전체) 실패: payload/일시 장애일 수 있으므로 삭제 근거가 아니고 다음 chunk는 계속한다.
-        List<PushTarget> fids = IntStream.range(0, 501)
-                .mapToObj(i -> PushTarget.informational("fid-" + i)).toList();
+        List<String> fids = IntStream.range(0, 501).mapToObj(i -> "fid-" + i).toList();
         FirebaseMessagingException callFailure = mock(FirebaseMessagingException.class);
         when(callFailure.getMessagingErrorCode()).thenReturn(MessagingErrorCode.INTERNAL);
         BatchResponse secondBatch = batchOf(successResponse());
